Revision history for Catalyst-ResponseHelpers

{{$NEXT}}

1.01  2016-08-11 14:15:56 PDT
        - Use 204 No Content when no message is provided to Ok().  204 No
          Content is more accurate and also means that that commonly-used
          Catalyst::Action::RenderView won't interfere.

1.00  2016-06-14 10:00:50 PDT
        - Initial release